# git-assistant

./: .env.template  .gitignore  Makefile  README.md  env.template  pyproject.toml
.cursor/rules/: customrule.mdc
docs/: api_design.md  phase1_requirements.md  requirements.md  tech_design.md
src/: fastapi_app.py  main.py
src/config/: app_settings.py  log_settings.py  settings.py
src/configs/: __init__.py  app_config.py
src/configs/app/: __init__.py  celery_config.py  llm_config.py
src/configs/deploy/: __init__.py
src/configs/enviornment/: __init__.py  db_config.py  http_config.py  logging_config.py  qdrant_config.py  redis_config.py  security_config.py
src/configs/packaging/: __init__.py
src/routes/: __init__.py  health.py
